{{$NEXT}}

0.002  2021-07-07 12:27:31 CEST
   - Added relevant Test:: modules
   - Adjusted output of help sub-command
   - Added example eg/tudu (plain sub-commands)

0.001  2021-07-06 18:05:31 CEST
   - Initial release