@@ -464,6 +464,9 @@ I<last> sub-command name. By default it is C<help>, but this can be
 overridden. Setting this to a false value disables looking for a
 sub-command, so it allows addressing the command itself directly.
 
+This must be the key associated to a child in the C<commands> mapping,
+i.e. the same name that is put in the C<children> array.
+
 =item C<no-auto>
 
 This option disables the automatic addition of automatically generated
